src/components/Monsters/MonsterTracker/MonsterTracker.css
.MonsterTracker--Container {
    margin-right: 12px;
}

.MonsterTracker {
    margin-bottom: 8px;
    border: 1px solid black;
    width: 250px;
}

.MonsterTracker--Name {
    text-align: center;
}

.MonsterTracker--StatsContainer {
    display: flex;
    /*background-color: rgb(185, 130, 57);*/
    color: white;
    /* TODO noooooooo (night demon) */
    overflow: hidden;
}

.MonsterTracker--Boss--Stats {
    background-color: rgb(148, 13, 13);
    padding: 8px;
    padding-left: 14px;
}

.MonsterTracker--Controls {
}

.MonsterTracker--StatusEffects--ToggleAll {
    padding: 8px;
    padding-bottom: 4px;
}

.MonsterTracker--Boss--Cover {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0,0.5);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.MonsterTracker--MonsterSelectors {
    display: flex;
}

.MonsterTracker--MonsterSelector {
    flex: auto;
}

.MonsterTracker--MonsterSelector--Alive {
    font-weight: 800;
}

.MonsterTracker--Monster {
    padding: 8px;
    border-bottom: 1px solid black;
}

.MonsterTracker--Monster:last-of-type {
    border-bottom: 0;
}

.MonsterTracker--Monster--Elite {
    background-color: gold;
}

.MonsterTracker--Monster--Controls {
    display: flex;
    justify-content: space-between;
    margin-bottom: 4px;
}

.MonsterTracker--Monster--Number {
    font-weight: 900;
    padding-left: 4px;
    padding-right: 8px;
}

.MonsterTracker--Name button {
    margin-left: 4px;
}

.MonsterTracker--Monster--Controls button {
    margin-left: 4px;
}

.MonsterTracker--Damage--Icon {
    display: block;
    cursor: pointer;
}

.MonsterTracker--Damage--Icon:hover {
    transform: scale(1.1);
}

.MonsterTracker--Damage--Icon.damage-1 {
    height: 24px;
    width: 24px;
    margin-top: 2px;
}

.MonsterTracker--Damage--Icon.damage-5 {
    height: 28px;
    width: 28px;
}

